uid 改为string
